# arrythemiachecker

./: .gitignore  README.MD  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/schemas/com.gunadarma.heartratearrhythmiachecker.database.RecordDatabase/: 1.json
app/src/androidTest/java/com/gunadarma/heartratearrhythmiachecker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native_opencv.cpp
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/: ArrhythmiaApplication.java  MainActivity.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/accessor/: RecordDatabase.java  RecordEntryDao.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/accessor/adapter/: RecordAdapter.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/adapter/: RecordAdapter.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/constant/: AppConstant.java  Constant.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/database/: RecordDatabase.java  RecordEntryDao.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/model/: HeartRateData.java  RPPGData.java  RecordEntry.java  SharedViewModel.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/opencv/: OpenCVLoader.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/service/: DataRecordServiceImpl.java  EcgGraphServiceImpl.java  HeartBeatsDetectionServiceImpl.java  MainMediaProcessingService.java  MainMediaProcessingServiceImpl.java  MainMediaProcessingServiceImplBackup.java  MediaPipeFaceTracker.java  MediaPipeHandTracker.java  MediaProcessingService.java  MediaProcessingServiceImpl.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/service/loader/: OpenCVLoader.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/service/mediacreator/: ImageGeneratorServiceImpl.java  VideoGeneratorServiceImpl.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/service/rppg/: RPPGHandPalmServiceImpl.java  RPPGHeadFaceServiceImpl.java  RPPGService.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/util/: AppConstant.java  AppUtil.java  Converters.java  VideoProcessingUtil.java
app/src/main/java/com/gunadarma/heartratearrhythmiachecker/views/: DetailFragment.java  HomeFragment.java  RecordFragment.java
app/src/main/jni/: Android.mk
app/src/main/res/color/: video_pill_text_selector.xml
app/src/main/res/drawable/: rounded_yellow_background.xml  status_tag_background.xml  video_pill_active.xml  video_pill_inactive.xml  video_pill_selector.xml  video_switch_background.xml
app/src/main/res/layout/: dialog_fullscreen_image.xml  fragment_detail.xml  fragment_home.xml  fragment_record.xml  item_record.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/gunadarma/heartratearrhythmiachecker/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/java/: AndroidManifest.xml
opencv/java/src/org/opencv/android/: JavaCamera2View.java
opencv/libcxx_helper/: CMakeLists.txt
